# rollafilm

./: pyproject.toml
src/notebooks/: preprocessing.ipynb
